fixing event calendar ugliness on mobile

--- a/wp-content/themes/techgirlz/style.css
+++ b/wp-content/themes/techgirlz/style.css
@@ -855,7 +855,11 @@ Pages
 }
 
 .tribe-events-user-recurrence-toggle span {
-	display: none;
+	display: none!important;
+}
+
+.tribe-events-sub-nav li a {
+	background: #ffffff;
 }
 
 .event-page-content span {
